syntax = "proto3";
package coredocumentgrpc;

option go_package = "github.com/CentrifugeInc/go-centrifuge/centrifuge/coredocument/coredocumentgrpc";

import "centrifuge-protobufs/coredocument/coredocument.proto";

// P2PMessage wraps a single CoreDocument to be transferred to another noed
message P2PMessage {
    coredocument.CoreDocument document = 1;
}

message P2PReply {
    coredocument.CoreDocument document = 1;
}

service P2PService {
    rpc Post(P2PMessage) returns (P2PReply) {}
}